Bug 81425 - glTF: limitation of walk-through mode
Summary: glTF: limitation of walk-through mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.2 rc
Hardware: Other All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 81107
  Show dependency treegraph
 
Reported: 2014-07-16 11:03 UTC by Tamás Zolnai
Modified: 2014-09-04 13:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Move camera around monster horizontally (25.74 KB, image/png)
2014-07-16 11:04 UTC, Tamás Zolnai
Details
Move camera around monster vertically (26.12 KB, image/png)
2014-07-16 11:09 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2014-07-16 11:03:19 UTC
The example mode is the monster model:
https://wiki.documentfoundation.org/images/c/cc/Monster_gltf_model.odp

In walk-through mode I can move the camera around the monster vertically using 'A' or 'S' keys and mouse very easily. So I can have look at its back, its face from the font, its stomach and so on.

On the other hand I can't move the camera around the monster horizontally. So for example it is hard to move camera to a position in walk-through mode from which I can see the monster's profile.
Comment 1 Tamás Zolnai 2014-07-16 11:04:57 UTC
Created attachment 102913 [details]
Move camera around monster horizontally
Comment 2 Tamás Zolnai 2014-07-16 11:09:39 UTC
Created attachment 102914 [details]
Move camera around monster vertically
Comment 3 Tamás Zolnai 2014-07-16 11:16:40 UTC
(In reply to comment #0)
> The example mode is the monster model:
> https://wiki.documentfoundation.org/images/c/cc/Monster_gltf_model.odp
> 
> In walk-through mode I can move the camera around the monster vertically
> using 'A' or 'S' keys and mouse very easily. So I can have look at its back,
> its face from the font, its stomach and so on.
> 
> On the other hand I can't move the camera around the monster horizontally.
> So for example it is hard to move camera to a position in walk-through mode
> from which I can see the monster's profile.

I accidentally swapped vertical and horizontal directions. Actually take a round horizontally is the working one ('A' and 'S' moves camera horizontally) and vertically is the one which should be fixed (need keys to move camera up and down).
See attachments which shows the path of the camera moving around the model.
Comment 4 Tamás Zolnai 2014-08-29 21:16:21 UTC
There were more limitations solved by the new libgltf-0.0.1 release:
 - Camera can't be moved upward/downward directly (now use "E" and "Q" for that)
 - Vertical rotation had a limitation from +90 to -90 degree (relative to the
   initial orientation
 - Third one is hard to describe, but here is a model to reproduce it:
   https://wiki.documentfoundation.org/File:Packman_maze.odp
   The problem is that when the camera is moved inside the maze and trying to
   turn right/left at a corner during walk in the maze, then the camera
   not looks right/left as expected but behave strange. So just try to walk
   through the maze and will see the problem.

Summary all of these problems is solved now:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=a60cc580212e2770c3aef7decfa09b64d4a3e52f

For 4.3 it's waiting for review:
https://gerrit.libreoffice.org/#/c/11194/