Upgrade libgltf to 0.0.1

News in this version:
- Solve some limitations of walkthrough mode (fdo#81425)
- Multisampling (better rendering quality, mainly at the edges)
- Better error handling (no crash in case of invalid input file)

Change-Id: I46fdf56b00476614487fbcc04178e43e33a01794