avmedia/source/opengl/oglwindow.hxx
@@ -17,11 +17,8 @@
 #include <com/sun/star/media/XPlayerWindow.hpp>
 #include <com/sun/star/media/ZoomLevel.hpp>
 
-#ifdef SYSTEM_LIBGLTF
-#include <libgltf/libgltf.h>
-#else
 #include <libgltf.h>
-#endif
+
 #include <vcl/opengl/OpenGLContext.hxx>
 #include <vcl/syschild.hxx>
 
@@ -76,7 +73,6 @@ private:
     bool m_bVisible;
     Point m_aLastMousePos;
     bool m_bIsOrbitMode;
-    double m_fCameraDistance;
 };
 
 } // namespace ogl
