external/libgltf/UnpackedTarball_libgltf.mk
@@ -16,8 +16,6 @@ $(eval $(call gb_UnpackedTarball_set_patchflags,libgltf,--binary))
 $(eval $(call gb_UnpackedTarball_set_patchlevel,libgltf,1))
 
 $(eval $(call gb_UnpackedTarball_add_patches,libgltf,\
-	external/libgltf/patches/missing_include.patch \
-	external/libgltf/patches/append_shader_version.patch \
 ))
 
 # vim: set noet sw=4 ts=4:
